syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keycloak.userservice.grpc";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse);
  rpc Register (RegisterRequest) returns (AuthResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string phone_number = 6;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  int64 expires_in = 4;
  int64 refresh_expires_in = 5;
  string user_id = 6;
  repeated string roles = 7;
} 